Adjusted z-index on site header to prevent widgets in content area from overlapping long dropdown submenus.

--- a/css/parent-theme-modifications-700+.css
+++ b/css/parent-theme-modifications-700+.css
@@ -6,6 +6,7 @@
 /* Style website header area */
 header#site-header {
 	background-size: cover;
+	z-index: 999;
 }
 
 /* Style the toggle-inner container (contains the search and menu icons) */
